subida de favico

--- a/cobro.html
+++ b/cobro.html
@@ -10,6 +10,7 @@
 
       gtag('config', 'G-XHW9CWKTYY');
     </script>
+    <link rel="icon" href="assets/Logo-PAIC.ico" type="image/x-icon">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>PAIC — Cobro a Deudores</title>
