videos de youtube

--- a/informes.html
+++ b/informes.html
@@ -35,10 +35,10 @@
       <section class="hero alt">
         <div class="container hero-grid">
           <div class="hero-media">
-            <div class="card media-card">
-              <img src="assets/paic_informe.png" alt="PAIC informes" class="hero-image">
+              <div class="card media-card video-card">
+                <iframe class="video-embed" src="https://www.youtube.com/embed/WTYMghVqug8" title="PAIC informes - video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
             </div>
-          </div>
           <div class="hero-text">
             <h1>¡De Horas a Segundos! Pregúntele a PAIC por sus informes.</h1>
             <p class="lead">Consultar datos significa abrir archivos, aplicar filtros y cruzar información. Su asistente lo hace en un instante, con una sola pregunta.</p>
@@ -53,6 +53,13 @@
         </div>
         <canvas class="hero-canvas" data-effect="particles"></canvas>
       </section>
+      
+  <!-- Imagen principal posicionada debajo del hero (centrada y más grande) -->
+  <section class="screenshot-section container">
+    <div class="card media-card screenshot-wrap">
+      <img src="assets/paic_informe.png" alt="PAIC informe" class="screenshot-image">
+    </div>
+  </section>
     </main>
 
     <footer class="site-footer">
