--- a/index.html
+++ b/index.html
@@ -48,16 +48,19 @@
             </div>
           </div>
           <div class="hero-media">
-            <div class="card media-card">
-              <img src="assets/paic_home.png" alt="PAIC overview" class="hero-image">
-            </div>
             <div id="video" class="card video-card">
-              <iframe width="100%" height="215" src="https://www.youtube.com/embed/aQ9mIPAAjjU?start=12" title="PAIC video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="100%" height="300" src="https://www.youtube.com/embed/N-42ptIn9BU" title="PAIC video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
         </div>
         <canvas class="hero-canvas" data-effect="particles"></canvas>
       </section>
+  <!-- Imagen principal posicionada debajo del hero (centrada y más grande) -->
+  <section class="screenshot-section container">
+    <div class="card media-card screenshot-wrap">
+      <img src="assets/paic_home.png" alt="PAIC overview" class="screenshot-image">
+    </div>
+  </section>
 
   <section class="cards container center-cards">
         <article class="card feature">
