--- a/tareas.html
+++ b/tareas.html
@@ -53,6 +53,13 @@
         </div>
         <canvas class="hero-canvas" data-effect="particles"></canvas>
       </section>
+      
+      <!-- Video centrado con efectos del sitio (tareas) -->
+      <section class="video-center-section container">
+        <div class="card media-card video-wrap">
+          <iframe class="video-embed" src="https://www.youtube.com/embed/tF9auzMMegw" title="PAIC tareas - video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </section>
     </main>
 
     <footer class="site-footer">
